...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pocketpaint_save_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/dialog_save_image_name"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/pocketpaint_image_name_save_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:layout_marginTop="19dp"
            android:importantForAutofill="no"
            android:inputType="text"
...
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/pocketpaint_btn_save_info"
            android:text="@string/dialog_save_image_format"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/pocketpaint_save_dialog_spinner"
            style="@style/PocketpaintSpinnerTheme"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pocketpaint_image_format_title"
            android:spinnerMode="dropdown"
            android:textSize="14sp"
...
